--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "awakit/media-bundle",
+    "name" : "awakit/mediaèbundle",
     "type" : "symfony-bundle",
     "authors" : [{
         "name" : "Jonathan Gauvain",
@@ -18,7 +18,8 @@
         "liip/imagine-bundle": "^1.6",
         "twig/extensions": "^1.3",
         "symfony/assetic-bundle": "^2.8",
-        "knplabs/gaufrette": "^0.2.1"
+        "knplabs/gaufrette": "^0.2.1",
+        "knplabs/doctrine-behaviors": "^1.3"
 
     },
     "autoload" : {
