format passe à filter dans les docs bundle compatible dunglas API

--- a/Resources/config/provider.yml
+++ b/Resources/config/provider.yml
@@ -10,7 +10,7 @@ services:
 
     awakit.media.image.provider:
         class: Awakit\MediaBundle\Provider\ImageProvider
-        arguments: [ "%assetic.write_to%", "%awakit.media.upload_folder%", "@liip_imagine.cache.manager" ]
+        arguments: [ "%assetic.write_to%", "%awakit.media.upload_folder%", "@liip_imagine.cache.manager", "@liip_imagine.filter.configuration" ]
         tags:
             - { name: media.provider, alias: image }
 
