--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	"prefer-stable": true,
     "require" : {
         "php": ">=5.5.9",
-        "symfony/symfony": "^3.0",
+        "symfony/symfony": "3.0.*",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "sensio/framework-extra-bundle": "^3.0.2",
@@ -21,6 +21,10 @@
         "knplabs/gaufrette": "^0.2.1",
         "knplabs/doctrine-behaviors": "^1.3"
 
+    },
+    "suggest": {
+        "api-platform/core": "for API feature",
+        "nelmio/api-doc-bundle": "for the API doc"
     },
     "autoload" : {
         "psr-0" : {
