class en parameters

--- a/Resources/config/doctrine.yml
+++ b/Resources/config/doctrine.yml
@@ -1,6 +1,9 @@
+parameters:
+    awakit.media.subscriber.class: Awakit\MediaBundle\Listener\MediaSubscriber
+
 services:
     awakit.media.subscriber:
-        class: Awakit\MediaBundle\Listener\MediaSubscriber
+        class: "%awakit.media.subscriber.class%"
         arguments:
             - "@awakit.media.provider.factory"
         tags:
