--- a/Resources/config/provider.yml
+++ b/Resources/config/provider.yml
@@ -1,15 +1,20 @@
+parameters:
+    awakit.media.provider.factory.class: Awakit\MediaBundle\Provider\Factory\ProviderFactory
+    awakit.media.file.provider.class: Awakit\MediaBundle\Provider\FileProvider
+    awakit.media.image.provider.class: Awakit\MediaBundle\Provider\ImageProvider
+
 services:
     awakit.media.provider.factory:
-        class: Awakit\MediaBundle\Provider\Factory\ProviderFactory
+        class: "%awakit.media.provider.factory.class%"
 
     awakit.media.file.provider:
-        class: Awakit\MediaBundle\Provider\FileProvider
+        class: "%awakit.media.file.provider.class%"
         arguments: [ "%assetic.write_to%", "%awakit.media.upload_folder%" ]
         tags:
             - { name: media.provider, alias: file }
 
     awakit.media.image.provider:
-        class: Awakit\MediaBundle\Provider\ImageProvider
+        class: "%awakit.media.image.provider.class%"
         arguments: [ "%assetic.write_to%", "%awakit.media.upload_folder%", "@liip_imagine.cache.manager", "@liip_imagine.filter.configuration" ]
         tags:
             - { name: media.provider, alias: image }
